--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
            inicial.style.display="none"
            confirmar.style.display="block"
         }
+        async function pegarLista() {
+           
+            fetch('http://18.191.194.144/convidados', {method: "GET"}).then((lista)=>lista.json()).then((resposta)=>{
+                const lista=document.getElementById("convidados")
+                resposta.forEach((convidado)=>{
+                    const elemento=document.createElement("h1")
+                    elemento.textContent=convidado.name
+                    elemento.id=convidado.id
+                    const botao=document.createElement("button")
+                    botao.textContent="Excluir"
+                    botao.onclick=()=>Delete(convidado.id,convidado.name)
+                    elemento.appendChild(botao)
+                    lista.appendChild(elemento)
+                })
+            })
+               
+        }
         async function Delete(id,nome) {
 
             const Delete = await fetch (`http://18.191.194.144/convidados/${id}`, {method: "DELETE"})
