acrescentei uma frase

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
     <div id="confirmacao">
         <h2>Que bom que teremos você conosco!</h2>
+        <h5 style="color: aliceblue;">Você é benção de Deus em nossas vidas!</h5>
         <p id="mensagemConfirmacao"></p>
         <div class="check">✔️</div>
         <button onclick="voltar()" class="buttonback">Voltar</button>
