--- a/convidados.html
+++ b/convidados.html
@@ -31,10 +31,12 @@
         }
 
         #listaConvidados {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20px;
+         max-height: 70vh; 
+         overflow-y: auto; 
+         padding: 10px;    
+         background-color: #f8f8f8; 
+         border-radius: 8px; 
+         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
         }
 
         .convidado {
